build/log/idf_py_stdout_output_11191
[1/12] Performing build step for 'bootloader'
[1/1] cd /Volumes/DataEx/DocumentsOffline/dev/gnarl_my/build/bootloader/esp-idf/esptool_py && /Volumes/DataEx/esp/.espressif/python_env/idf5.4_py3.13_env/bin/python /Volumes/DataEx/esp/esp-idf/components/partition_table/check_sizes.py --offset 0x8000 bootloader 0x1000 /Volumes/DataEx/DocumentsOffline/dev/gnarl_my/build/bootloader/bootloader.bin
Bootloader binary size 0x6580 bytes. 0xa80 bytes (9%) free.
[2/12] No install step for 'bootloader'
[3/12] Completed 'bootloader'
[4/12] Building C object esp-idf/radio/CMakeFiles/__idf_radio.dir/rfm95.c.obj
FAILED: [code=1] esp-idf/radio/CMakeFiles/__idf_radio.dir/rfm95.c.obj 
/Users/vladimirdyskin/.espressif/tools/xtensa-esp-elf/esp-14.2.0_20241119/xtensa-esp-elf/bin/xtensa-esp32-elf-gcc -DESP_PLATFORM -DIDF_VER=\"v5.4.1\" -DSOC_MMU_PAGE_SIZE=CONFIG_MMU_PAGE_SIZE -DSOC_XTAL_FREQ_MHZ=CONFIG_XTAL_FREQ -D_GLIBCXX_HAVE_POSIX_SEMAPHORE -D_GLIBCXX_USE_POSIX_SEMAPHORE -D_GNU_SOURCE -D_POSIX_READER_WRITER_LOCKS -I/Volumes/DataEx/DocumentsOffline/dev/gnarl_my/include -I/Volumes/DataEx/DocumentsOffline/dev/gnarl_my/build/config -I/Volumes/DataEx/DocumentsOffline/dev/gnarl_my/components/radio -I/Volumes/DataEx/esp/esp-idf/components/newlib/platform_include -I/Volumes/DataEx/esp/esp-idf/components/freertos/config/include -I/Volumes/DataEx/esp/esp-idf/components/freertos/config/include/freertos -I/Volumes/DataEx/esp/esp-idf/components/freertos/config/xtensa/include -I/Volumes/DataEx/esp/esp-idf/components/freertos/FreeRTOS-Kernel/include -I/Volumes/DataEx/esp/esp-idf/components/freertos/FreeRTOS-Kernel/portable/xtensa/include -I/Volumes/DataEx/esp/esp-idf/components/freertos/FreeRTOS-Kernel/portable/xtensa/include/freertos -I/Volumes/DataEx/esp/esp-idf/components/freertos/esp_additions/include -I/Volumes/DataEx/esp/esp-idf/components/esp_hw_support/include -I/Volumes/DataEx/esp/esp-idf/components/esp_hw_support/include/soc -I/Volumes/DataEx/esp/esp-idf/components/esp_hw_support/include/soc/esp32 -I/Volumes/DataEx/esp/esp-idf/components/esp_hw_support/dma/include -I/Volumes/DataEx/esp/esp-idf/components/esp_hw_support/ldo/include -I/Volumes/DataEx/esp/esp-idf/components/esp_hw_support/debug_probe/include -I/Volumes/DataEx/esp/esp-idf/components/esp_hw_support/port/esp32/. -I/Volumes/DataEx/esp/esp-idf/components/esp_hw_support/port/esp32/include -I/Volumes/DataEx/esp/esp-idf/components/heap/include -I/Volumes/DataEx/esp/esp-idf/components/heap/tlsf -I/Volumes/DataEx/esp/esp-idf/components/log/include -I/Volumes/DataEx/esp/esp-idf/components/soc/include -I/Volumes/DataEx/esp/esp-idf/components/soc/esp32 -I/Volumes/DataEx/esp/esp-idf/components/soc/esp32/include -I/Volumes/DataEx/esp/esp-idf/components/soc/esp32/register -I/Volumes/DataEx/esp/esp-idf/components/hal/platform_port/include -I/Volumes/DataEx/esp/esp-idf/components/hal/esp32/include -I/Volumes/DataEx/esp/esp-idf/components/hal/include -I/Volumes/DataEx/esp/esp-idf/components/esp_rom/include -I/Volumes/DataEx/esp/esp-idf/components/esp_rom/esp32/include -I/Volumes/DataEx/esp/esp-idf/components/esp_rom/esp32/include/esp32 -I/Volumes/DataEx/esp/esp-idf/components/esp_rom/esp32 -I/Volumes/DataEx/esp/esp-idf/components/esp_common/include -I/Volumes/DataEx/esp/esp-idf/components/esp_system/include -I/Volumes/DataEx/esp/esp-idf/components/esp_system/port/soc -I/Volumes/DataEx/esp/esp-idf/components/esp_system/port/include/private -I/Volumes/DataEx/esp/esp-idf/components/xtensa/esp32/include -I/Volumes/DataEx/esp/esp-idf/components/xtensa/include -I/Volumes/DataEx/esp/esp-idf/components/xtensa/deprecated_include -I/Volumes/DataEx/esp/esp-idf/components/lwip/include -I/Volumes/DataEx/esp/esp-idf/components/lwip/include/apps -I/Volumes/DataEx/esp/esp-idf/components/lwip/include/apps/sntp -I/Volumes/DataEx/esp/esp-idf/components/lwip/lwip/src/include -I/Volumes/DataEx/esp/esp-idf/components/lwip/port/include -I/Volumes/DataEx/esp/esp-idf/components/lwip/port/freertos/include -I/Volumes/DataEx/esp/esp-idf/components/lwip/port/esp32xx/include -I/Volumes/DataEx/esp/esp-idf/components/lwip/port/esp32xx/include/arch -I/Volumes/DataEx/esp/esp-idf/components/lwip/port/esp32xx/include/sys -I/Volumes/DataEx/esp/esp-idf/components/driver/deprecated -I/Volumes/DataEx/esp/esp-idf/components/driver/i2c/include -I/Volumes/DataEx/esp/esp-idf/components/driver/touch_sensor/include -I/Volumes/DataEx/esp/esp-idf/components/driver/twai/include -I/Volumes/DataEx/esp/esp-idf/components/driver/touch_sensor/esp32/include -I/Volumes/DataEx/esp/esp-idf/components/esp_pm/include -I/Volumes/DataEx/esp/esp-idf/components/esp_ringbuf/include -I/Volumes/DataEx/esp/esp-idf/components/esp_driver_gpio/include -I/Volumes/DataEx/esp/esp-idf/components/esp_driver_pcnt/include -I/Volumes/DataEx/esp/esp-idf/components/esp_driver_gptimer/include -I/Volumes/DataEx/esp/esp-idf/components/esp_driver_spi/include -I/Volumes/DataEx/esp/esp-idf/components/esp_driver_mcpwm/include -I/Volumes/DataEx/esp/esp-idf/components/esp_driver_ana_cmpr/include -I/Volumes/DataEx/esp/esp-idf/components/esp_driver_i2s/include -I/Volumes/DataEx/esp/esp-idf/components/esp_driver_sdmmc/include -I/Volumes/DataEx/esp/esp-idf/components/sdmmc/include -I/Volumes/DataEx/esp/esp-idf/components/esp_driver_sdspi/include -I/Volumes/DataEx/esp/esp-idf/components/esp_driver_sdio/include -I/Volumes/DataEx/esp/esp-idf/components/esp_driver_dac/include -I/Volumes/DataEx/esp/esp-idf/components/esp_driver_rmt/include -I/Volumes/DataEx/esp/esp-idf/components/esp_driver_tsens/include -I/Volumes/DataEx/esp/esp-idf/components/esp_driver_sdm/include -I/Volumes/DataEx/esp/esp-idf/components/esp_driver_i2c/include -I/Volumes/DataEx/esp/esp-idf/components/esp_driver_uart/include -I/Volumes/DataEx/esp/esp-idf/components/vfs/include -I/Volumes/DataEx/esp/esp-idf/components/esp_driver_ledc/include -I/Volumes/DataEx/esp/esp-idf/components/esp_driver_parlio/include -I/Volumes/DataEx/esp/esp-idf/components/esp_driver_usb_serial_jtag/include -mlongcalls -Wno-frame-address  -fno-builtin-memcpy -fno-builtin-memset -fno-builtin-bzero -fno-builtin-stpcpy -fno-builtin-strncpy -fdiagnostics-color=always -ffunction-sections -fdata-sections -Wall -Werror=all -Wno-error=unused-function -Wno-error=unused-variable -Wno-error=unused-but-set-variable -Wno-error=deprecated-declarations -Wextra -Wno-error=extra -Wno-unused-parameter -Wno-sign-compare -Wno-enum-conversion -gdwarf-4 -ggdb -Og -fno-shrink-wrap -Wwrite-strings -fmacro-prefix-map=/Volumes/DataEx/DocumentsOffline/dev/gnarl_my=. -fmacro-prefix-map=/Volumes/DataEx/esp/esp-idf=/IDF -fstrict-volatile-bitfields -fno-jump-tables -fno-tree-switch-conversion -std=gnu17 -Wno-old-style-declaration -MD -MT esp-idf/radio/CMakeFiles/__idf_radio.dir/rfm95.c.obj -MF esp-idf/radio/CMakeFiles/__idf_radio.dir/rfm95.c.obj.d -o esp-idf/radio/CMakeFiles/__idf_radio.dir/rfm95.c.obj -c /Volumes/DataEx/DocumentsOffline/dev/gnarl_my/components/radio/rfm95.c
/Volumes/DataEx/DocumentsOffline/dev/gnarl_my/components/radio/rfm95.c:159:21: error: redefinition of 'radio_failures'
  159 | static volatile int radio_failures = 0;
      |                     ^~~~~~~~~~~~~~
/Volumes/DataEx/DocumentsOffline/dev/gnarl_my/components/radio/rfm95.c:25:21: note: previous definition of 'radio_failures' with type 'int'
   25 | static volatile int radio_failures = 0;
      |                     ^~~~~~~~~~~~~~
[5/12] Building C object esp-idf/main/CMakeFiles/__idf_main.dir/gnarl.c.obj
ninja: build stopped: subcommand failed.
